--- a/pong.html
+++ b/pong.html
@@ -1,22 +1,62 @@
-<canvas width="600" height="400"></canvas>
-
-<script></script>
-
+//variáveis da bolinha
 let xBolinha = 300;
 let yBolinha = 200;
 let diametro = 15;
+let raio = diametro / 2;
 
+//velocidade da bolinha
 let velocidadeXBolinha = 6;
 let velocidadeYBolinha = 6;
+let raqueteComprimento = 10;
+let raqueteAltura = 90;
+
+//variáveis da raquete
+let xRaquete = 5;
+let yRaquete =150;
 
 function setup() {
   createCanvas(600, 400);
 }
 
 function draw() {
-  background(0);
-  circle(xBolinha,yBolinha,diametro);
-  xBolinha += velocidadeXBolinha;
-  yBolinha += velocidadeYBolinha;
+    background(0);
+    mostraBolinha();
+     movimentaBolinha();
+    verificaColisaoBorda();
+    mostraRaquete();
+  movimentaMinhaRaquete();
 }
-</script>
+
+function mostraBolinha() {
+    circle(xBolinha, yBolinha, diametro)
+}
+
+function movimentaBolinha() {
+    xBolinha += velocidadeXBolinha;
+    yBolinha += velocidadeYBolinha;
+}
+
+function verificaColisaoBorda() {
+    if (xBolinha + raio > width || xBolinha - raio < 0) {
+        velocidadeXBolinha *= -1;
+    }
+    if (yBolinha + raio > height || yBolinha - raio < 0) {
+        velocidadeYBolinha *= -1;
+    }
+}
+
+function mostraRaquete(){
+  rect(xRaquete, yRaquete, raqueteComprimento ,raqueteAltura);
+}
+
+function movimentaMinhaRaquete(){
+  if(keyIsDown(UP_ARROW)){
+    yRaquete -= 10;
+    
+  }
+    if(keyIsDown(DOWN_ARROW)){
+    yRaquete += 10;
+    
+  }
+  
+}
